--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "Clean Tab",
     "version": "1.0.0",
-    "default_locale": "en_US",
     "description": "Buy Me a coffee <a href='https://buymeacoffee.com/happer64bit'>Here</a>",
-    "chrome_url_override": {
-        "nametab": "src/pages/index.html"
-    }
+    "chrome_url_overrides": {
+        "newtab": "pages/index.html"
+    },
+    "manifest_version": 3
 }
