--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.1.0"
   },
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html --dist-dir bundle && echo 'Successfully bundled into bundle/ folder'"
   },
   "devDependencies": {
     "process": "^0.11.10"
